@@ -1821,6 +1821,7 @@ CCP_CUT=Cut
 CCP_COPY=Copy
 CCP_PASTE=Paste
 
+MT_AUTO_FETCH=&Automatically Fetch Translations
 MT_ONLY_UNTRANSLATED=&Untranslated Segments Only
 
 # Machine translation engines
